syntax = "proto3";

package vk.post.predict.service;
import "google/api/annotations.proto";

service PredictService {
    rpc Predict(PredictMessage) returns (PredictMessage) {
        option (google.api.http) = {
            post: "/predict",
            body: "messages"
        };
    };
}

message PredictMessage {

    message MessagePredict {
        int32 owner_id = 1 [json_name="ownerId"];
        int32 id = 2;
        string text = 3;
        string category = 4;
        bool is_accept = 5 [json_name="isAccept"];
    }

    repeated MessagePredict messages = 1 [json_name="messages"];
}
